--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="container">
                     <div class="col2">
                         <div class="engineContainer">
-                            <img src="images/mainIMG/topluluk.jpg" class="imageOver">
+                            <img src="images/mainIMG/topluluk.png" class="imageOver">
                             <div class="engineOverlay">
                                 <div class="engineText"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdY0wms0ftBLeM0MQLdQTrn7PHkP1nqxTtdtnI_21N2mqa_Vg/viewform" target="_blank">Kayıt Formu</a></div>             <!-- Buraya kayıt formu linki gelecek.(Stil düzenlemelerini yaparsın) -->
                             </div>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="col2">
                         <div class="engineContainer">
-                            <img src="images/mainIMG/mesaj.jpg" class="imageOver">
+                            <img src="images/mainIMG/mesaj.png" class="imageOver">
                             <div class="engineOverlay2">
                                 <div class="engineText"><a href="#" target="_blank">Tech Hub'ın size bir mesajı var</a></div>   <!-- Buraya site mesajı linki gelecek (Stil düzenlemelerini yaparsın) -->
                             </div>
